@@ -1,6 +1,7 @@
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a factory for backends
+	* Added a factory for storages
 
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
